--- a/css/components.css
+++ b/css/components.css
@@ -28,3 +28,191 @@
   background-color: #fff;
   padding: var(--card-p-x) var(--card-p-y);
 }
+
+/* Expand Tap */
+
+.expand-tap {
+  --expand-tap-w: 800px;
+  --expand-tap-h: 800px;
+  --expand-tap-offset-x: -330px;
+  --expand-tap-offset-y: -330px;
+  
+  position: fixed;
+  bottom: var(--expand-tap-offset-y);
+  right: var(--expand-tap-offset-x);
+
+  width: var(--expand-tap-w);
+  height: var(--expand-tap-h);
+
+  display: flex;
+  align-items: center;
+}
+
+.expand-tap:after {
+  background-color: rgba(32, 117, 47, 0.85);
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  scale: 0;
+  transition: scale 0.3s cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+.expand-tap.expand-tap--open {
+  visibility: visible;
+  opacity: 1;
+}
+
+.expand-tap.expand-tap--open:after {
+  scale: 1;
+}
+
+.expand-tap__content {
+  visibility: hidden;
+  opacity: 0;
+
+  transition: opacity 0.5s cubic-bezier(0.42, 0, 0.58, 1);
+
+  max-width: 400px;
+  margin-top: -250px;
+  margin-left: 50px;
+  padding: 0.5rem;
+}
+
+.expand-tap.expand-tap--open .expand-tap__content {
+  visibility: visible;
+  opacity: 1;
+}
+
+.expand-tap__content h2 {
+  color: #fff;
+  font-size: 1.75rem;
+  margin-bottom: 0.5rem;
+}
+
+.expand-tap__content p {
+  color: #fff;
+  font-weight: bold;
+}
+
+.expand-tap__wave {
+  --expand-tap-wave-w: 120px;
+  --expand-tap-wave-h: 120px;
+
+  position: absolute;
+  top: calc(var(--expand-tap-h) + var(--expand-tap-offset-y) - var(--expand-tap-wave-h));
+  left: calc(var(--expand-tap-w) + var(--expand-tap-offset-x) - var(--expand-tap-wave-w));
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: var(--expand-tap-wave-w);
+  height: var(--expand-tap-wave-h);
+}
+
+.expand-tap__wave button {
+  width: 60px;
+  height: 60px;
+
+  border: 0;
+  border-radius: 50%;
+  background-color: rgb(32, 117, 47);
+  color: #fff;
+  outline: 15px solid #fff;
+  font-size: 1.85rem;
+  cursor: pointer;
+  transform: scale(1);
+  animation: pulse-effect 1s infinite;
+}
+
+.expand-tap__wave button:hover {
+  background-color: #2ea342;
+}
+
+@keyframes pulse-effect {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+  
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 50px rgba(255, 255, 255, 0);
+  }
+  
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+
+/* My Content */
+
+.expand-tap-target {
+  position: fixed;
+  bottom: 115px;
+  right: 15px;
+  max-width: 350px;
+  max-height: 0; /* 400px */
+  overflow: auto;
+
+  background-color: #fff;
+  z-index: 10;
+
+  transition: all 0.35s ease-out
+}
+
+.expand-tap-target--show {
+  max-height: 400px
+}
+
+.my-content {
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  height: 100%;
+  overflow: auto;
+}
+
+.my-content__header {
+  background-color: #dff9e3;
+  color: rgb(32, 117, 47);
+  font-weight: bold;
+  font-size: 1.25rem;
+  text-align: center;
+  padding: 1rem;
+}
+
+.my-content__body ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.my-content__body ul li {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.my-content__body ul li span {
+  background-color: rgb(32, 117, 47);
+  color: #fff;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.my-content__body ul li:not(:last-child) {
+  border-bottom: 1px solid #eaeaea;
+}
